Fix navigation width on mobile

--- a/src/components/layout/Navbar/Navbar.module.scss
+++ b/src/components/layout/Navbar/Navbar.module.scss
@@ -146,10 +146,11 @@
         flex-direction: column;
         height: auto;
         justify-content: space-around;
+        left: 0;
         padding: 5vh 0 5vh 0;
         position: fixed;
         transition: all 0.5s;
-        width: 100%;
+        width: 102vw;
         z-index: 20;
       }
     }
@@ -203,11 +204,6 @@
 
 @media only screen and (min-width: 1024px) and (max-width: 1200px) {
   .root {
-    .mainMenu,
-    .mainMenu__active {
-      width: 102vw; //?
-      left: 0;
-    }
     .languagesBox {
       left: 90%;
       top: -500%;
@@ -217,11 +213,6 @@
 
 @media only screen and (orientation: landscape) and (min-width: 1024px) and (max-width: 1199px) {
   .root {
-    .mainMenu,
-    .mainMenu__active {
-      width: 102vw; //?
-      left: 0;
-    }
     .languagesBox {
       left: 90%;
       top: -300%;
@@ -232,11 +223,6 @@
 /* Medium Devices, Tablets iPad */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .root {
-    .mainMenu,
-    .mainMenu__active {
-      width: 102vw; //?
-      left: 0;
-    }
     .languagesBox {
       left: 90%;
       top: -400%;
